# vibe-aigc

./: .env.example  .gitignore  3090_workflow_dump.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GAP_ANALYSIS.md  LICENSE  README.md  RELEASE_NOTES.md  RELEASE_NOTES_0.1.1.md  SECURITY.md  aigc_final.txt  analyze_workflow.py  check_3090_models.py  check_3090_pilot.py  check_ltx_te.py  check_ltxv_sampler.py  check_node_patterns.py  check_queue.py  check_running.py  check_status.py  convert_backend_video.py  convert_to_gif.py  debug_vlm.py  dogfood_e2e.py  dogfood_full.py  dogfood_full.txt  dogfood_haiku.txt  dogfood_output.txt  dogfood_result.txt  dogfood_test.py  dogfood_zai.py  dogfood_zhipu.py  e2e_full.py  e2e_full_demo.py  e2e_paper_architecture.py  e2e_video.py  e2e_video_backend.py  (+22 more)
.dogfood_assets/: manifest.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
.wreckit/: config.json
.wreckit/items/001-vibe-model-meta-planner/: item.json  plan.md  prd.json  research.md
.wreckit/items/002-advanced-execution-feedback/: item.json  plan.md  prd.json  progress_update.md  research.md
.zai_assets/: manifest.json
.zhipu_test/: manifest.json
configs/: rtx2080_optimal.json  rtx3090_optimal.json
docs/: MODEL_REGISTRY_V2.md  changelog.md  contributing.md  examples.md  index.md
docs/api/: executor.md  models.md  planner.md  visualization.md
docs/assets/: landing.css  og-image.html
docs/getting-started/: installation.md  quickstart.md
docs/guide/: checkpoints.md  cli.md  concepts.md  visualization.md  workflows.md
examples/: basic_usage.py  custom_executor.py  integration_openai.py  manual_workflow.py  with_checkpoints.py  with_ollama.py  with_visualization.py
landing/: index.html
tests/: test_adaptive_replanning.py  test_agents.py  test_assets.py  test_auto_checkpoint.py  test_automatic_checkpoints.py  test_checkpoint_serialization.py  test_error_handling.py  test_executor.py  test_feedback_system.py  test_integration.py  test_knowledge_base.py  test_metaplanner_resume.py  test_metaplanner_visualization.py  test_models.py  test_parallel_execution.py  test_pipeline.py  test_planner.py  test_progress_callbacks.py  test_tools.py  test_visualization.py  test_workflow_resume.py
vibe_aigc/: __init__.py  agents.py  assets.py  audio.py  character.py  cli.py  comfyui.py  composer_general.py  discovery.py  executor.py  fidelity.py  knowledge.py  llm.py  model_registry.py  models.py  mv_pipeline.py  persistence.py  pipeline.py  planner.py  tools.py  tools_audio.py  tools_comfyui.py  tools_multimodal.py  tools_utility.py  tools_video.py  tools_vision.py  vibe_backend.py  video.py  visualization.py  vlm_feedback.py  workflow_backend.py  workflow_composer.py  workflow_executor.py  workflow_registry.py  workflow_strategies.py  workflows.py
vibe_aigc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
workflows/: README.md  vlm_feedback_workflow.json  wan22_i2v_svi_pro.json
