[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-aigc"
version = "0.1.0"
description = "A New Paradigm for Content Generation via Agentic Orchestration"
authors = [{name = "Vibe AIGC Contributors"}]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]