[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vibe_aigc*"]
exclude = ["tests*", "docs*", "examples*", "landing*"]

[project]
name = "vibe-aigc"
version = "0.1.0"
description = "A New Paradigm for Content Generation via Agentic Orchestration"
authors = [{name = "Vibe AIGC Contributors"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["ai", "aigc", "agents", "orchestration", "content-generation", "llm", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
docs = [
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "pymdown-extensions>=10.0.0",
]

[project.scripts]
vibe-aigc = "vibe_aigc.cli:main"

[project.urls]
Homepage = "https://jmanhype.github.io/vibe-aigc"
Repository = "https://github.com/jmanhype/vibe-aigc"
Documentation = "https://jmanhype.github.io/vibe-aigc"
Changelog = "https://jmanhype.github.io/vibe-aigc/changelog"
Issues = "https://github.com/jmanhype/vibe-aigc/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
